--- a/icecream/TODO
+++ b/icecream/TODO
@@ -4,6 +4,7 @@
       chown 0 lib/libc.so*
       PATH=$PWD/usr/bin LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib:/lib usr/bin/gcc -B/tmp/test/usr/lib/gcc-lib/i586-suse-linux/3.3.1/ -c ~/test.ii
 * scheduler: tell registered monitors
+* client: if the is interrupted, remove the job from the CS
 
 IDEAS:
 * provide a way to pass jobs through the scheduler for multihomed servers
