--- a/icecream/TODO
+++ b/icecream/TODO
@@ -8,6 +8,7 @@
 * Netname to have DEBUG and REAL (Matz)
 * watch the binary and restart the daemon (Coolo)
 * easier monitor views
+* let the client have run the job on two different servers for every 10th or 100th job
 
 IDEAS:
 * provide a way to pass jobs through the scheduler for multihomed servers
