--- a/README
+++ b/README
@@ -5,3 +5,10 @@ and I don't want people to do that without explicit intend.
 
 Thanks, Stephan
 
+NOTE: Although icecream will compile on some non-Linux systems,
+it depends critically on Linux' /proc/ structures and will fail
+at runtime until somebody figures out how to emulate the "ticks"
+form of process accounting in there.
+
+- [ade]
+
