--- a/icecream/TODO
+++ b/icecream/TODO
@@ -2,12 +2,9 @@
    as user: 
       chown 0 lib/libc.so*
       PATH=$PWD/usr/bin LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib:/lib usr/bin/gcc -B/tmp/test/usr/lib/gcc-lib/i586-suse-linux/3.3.1/ -c ~/test.ii
-* client: if the is interrupted, remove the job from the CS
-* server: if the client is cancelled, there might be jobs that reside in the joblist
-  even though the daemon never heared of them - timeout!
 * monitor: easier monitor views
 * client: let the client have run the job on two different servers for every 10th or 100th job
 * all: protocol version
-* scheduler: Arvin rebooted purcell and noone noticed (my compile jobs stayed in Compiling)
-    The daemon tries to tell the scheduler if it goes down, but I guess purcell crashed
-
+* scheduler/client: If ICECC_VERSION isn't set at all the client is confused,
+  because the scheduler returns with 'false' in got_env (because it doesn't
+  yet handle the catch-all environment), but, well, ICECC_VERSION isn't set ;)
