In retrospective just the scheduler is broken.
svn path=/trunk/kdenonbeta/icecream/; revision=288889

--- a/icecream/TODO
+++ b/icecream/TODO
@@ -5,6 +5,6 @@
 * monitor: easier monitor views
 * client: let the client have run the job on two different servers for every 10th or 100th job
 * all: protocol version
-* scheduler/client: If ICECC_VERSION isn't set at all the client is confused,
+* scheduler: If ICECC_VERSION isn't set at all the client is confused,
   because the scheduler returns with 'false' in got_env (because it doesn't
   yet handle the catch-all environment), but, well, ICECC_VERSION isn't set ;)
