--- a/icecream/TODO
+++ b/icecream/TODO
@@ -8,3 +8,4 @@
 * scheduler: If ICECC_VERSION isn't set at all the client is confused,
   because the scheduler returns with 'false' in got_env (because it doesn't
   yet handle the catch-all environment), but, well, ICECC_VERSION isn't set ;)
+* client: factor out file sending (possibly to libcommon)
