--- a/icecream/TODO
+++ b/icecream/TODO
@@ -1,5 +1,5 @@
 * daemon: install and use build root
-   as user: 
+   as user: (not sure it's worth it)
       chown 0 lib/libc.so*
       PATH=$PWD/usr/bin LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib:/lib usr/bin/gcc -B/tmp/test/usr/lib/gcc-lib/i586-suse-linux/3.3.1/ -c ~/test.ii
 * monitor: easier monitor views
