--- a/icecream/README
+++ b/icecream/README
@@ -33,3 +33,24 @@ and the scheduler as unpriviliged user!
 If you want funny stats, you might want to run "icemon".
 
 Enjoy!
+
+Using icecream in hetegogenous environments
+===========================================
+
+If you are running icecream daemons in the same icecream network but on machines
+with incompatible compiler versions you have to tell icecream which environment
+you are using. Use
+
+  create-env
+
+to create an archive file containing all the files necessary to setup the
+compiler environment. The file will have a random unique name like
+"ddaea39ca1a7c88522b185eca04da2d8.tar.bz2" per default. Rename it to something
+more expressive for your convenience, e.g. "i386-3.3.1.tar.bz2". Set
+
+  ICECC_VERSION=<filename_of_archive_containing_your_environment>
+
+in the shell environment where you start the compile jobs and the file will be
+transfered to the daemons where your compile jobs run and installed to a chroot
+environment for executing the compile jobs in the environment fitting to the
+environment of the client. This requires that the icecream deamon runs as root.
