--- a/icecream/README
+++ b/icecream/README
@@ -34,7 +34,7 @@ If you want funny stats, you might want to run "icemon".
 
 Enjoy!
 
-Using icecream in hetegogenous environments
+Using icecream in heterogeneous environments
 ===========================================
 
 If you are running icecream daemons in the same icecream network but on machines
