support for differing platforms (by uname's .machine) - require ICECC_VERSION to be set for now (read the TODO file if you're annoyed :)   - which in return means iceccd requires being started as root feedback wanted - especially from those that share i686 and i586 build hosts (those poor souls :)
svn path=/trunk/kdenonbeta/icecream/; revision=306953

--- a/icecream/TODO
+++ b/icecream/TODO
@@ -1,4 +1,4 @@
-* cross compiling and multiple architectures in general
+* cross compiling
 * daemon/client: register the system compiler with <uname>-<gcc version> and if a client compiles
   without ICECC_VERSION, let the daemon package the environment. This way, the user doesn't
   need to setup anything
