--- a/icecream/TODO
+++ b/icecream/TODO
@@ -10,4 +10,7 @@
    as user: (not sure it's worth it)
       chown 0 lib/libc.so*
       PATH=$PWD/usr/bin LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib:/lib usr/bin/gcc -B/tmp/test/usr/lib/gcc-lib/i586-suse-linux/3.3.1/ -c ~/test.ii
+* better support for gcc installations not in /usr - for example in allowing the distcc way
+  icecc /opt/gcc-cvs/bin/g++ -c test.cpp (you would need to rely on $ICECC_VERSION then as
+  the daemon can hardly know what compiler you used, but that should be ok)
 
