--- a/icecream/TODO
+++ b/icecream/TODO
@@ -13,6 +13,7 @@
 * better support for gcc installations not in /usr - for example in allowing the distcc way
   icecc /opt/gcc-cvs/bin/g++ -c test.cpp (you would need to rely on $ICECC_VERSION then as
   the daemon can hardly know what compiler you used, but that should be ok)
+* put the $bindir in config.h, so that create-env can be called without $PATH
 
 Features for paranoid users (hi Chris):
   - bind the broadcast listener to fixed local port (8765) (otherwise not firewallable)
