--- a/icecream/TODO
+++ b/icecream/TODO
@@ -1,21 +1,37 @@
+Release Critical:
+* keep better track of currently installing daemons (matz)
+* daemon: drop root rights before doing anything with client data (coolo)
+* bind the broadcast listener to fixed local port (8765) (otherwise not firewallable)
+* put the $bindir in config.h, so that create-env can be called without $PATH
+* chmod TMPDIR/native, as otherwise set umask prevent it from being readable by the client
+   I'm wondering if it doesn't make sense to leave the daemon out of the game and let the
+   client package the environment - it could either cache it in /tmp and leave a note in
+   ~/.icecream or it packages it right into ~/.icecream and use e.g. the inode numbers of
+   the compilers to verify it's the right environment - think NFS users changing machines.
+   This would simplify some things and avoid the above bugs (and it would make it more
+   convenient for users of /opt/gcc-cvs/bin too)
+* Improve Documentation (cschum)
+
+Dream Mode:
+* daemon: run without chroot rights (not sure it's worth it)
+      as we can't overwrite the ld-linux.so, we would need to call all binaries ourselves.
+      E.g. PATH=/ LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib lib/ld-linux.so usr/bin/gcc -print-prog-name=cc1
+        parse that output and use it for -B
+      PATH=/ LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib lib/ld-linux.so usr/bin/gcc -B $basepath -v test.ii -finvalid-opt
+        parse that output and use the command line used (remove -pipe from the options)
+      E.g.
+      lib/ld-linux.so $basepath/cc1plus -fpreprocessed test.ii -quiet -dumpbase test -auxbase test -version -o test.s
+      ... you figured here it's just too ugly to be worth it
+  - another way might be to require libelf and patch the binaries 
+
+Random:
 * Option -iiface to specify the interface[s] to listen on for the scheduler, or
   to use for the daemon.
 * Don't explicitly forbid tunnels because it could be useful for things like
   vmware
-* keep better track of currently installing daemons (matz)
 * If someone calls a amd64 client on a host that runs a ia32 daemon and there are
   no other amd64 daemons in the farm, he will get no answer, but a timeout from
   scheduler (quite a corner case, but neat)
-* daemon: install and use build root
-   as user: (not sure it's worth it)
-      chown 0 lib/libc.so*
-      PATH=$PWD/usr/bin LD_LIBRARY_PATH=$PWD/lib:$PWD/usr/lib:/lib usr/bin/gcc -B/tmp/test/usr/lib/gcc-lib/i586-suse-linux/3.3.1/ -c ~/test.ii
 * better support for gcc installations not in /usr - for example in allowing the distcc way
   icecc /opt/gcc-cvs/bin/g++ -c test.cpp (you would need to rely on $ICECC_VERSION then as
   the daemon can hardly know what compiler you used, but that should be ok)
-* put the $bindir in config.h, so that create-env can be called without $PATH
-
-Features for paranoid users (hi Chris):
-  - bind the broadcast listener to fixed local port (8765) (otherwise not firewallable)
-  - chmod TMPDIR/native, as otherwise set umask prevent it from being readable
-    by the client
