--- a/icecream/TODO
+++ b/icecream/TODO
@@ -12,6 +12,8 @@ Release Critical:
 * I'm not sure but I think we need to lock the local host _before_ we fork off the notification
   child. Otherwise the gantt view explodes :)
 * make the protocol version an uint32, not a hand-build array.
+* let the client specify it was compiled with recent compiler (supporting -param). If so,
+  let the daemon compile with the options, otherwise leave them out. 
 
 Random:
 * Option -iiface to specify the interface[s] to listen on for the scheduler, or
