no non ASCII chars
svn path=/trunk/kdenonbeta/icecream/; revision=366711

--- a/icecream/debian/changelog
+++ b/icecream/debian/changelog
@@ -2,4 +2,4 @@ icecc (0.6-1) unstable; urgency=low
 
   * Initial Release.
 
- -- André Wöbbeking <Woebbeking@web.de>  Sat, 27 Nov 2004 15:36:15 +0200
+ -- Andre Woebbeking <Woebbeking@web.de>  Sat, 27 Nov 2004 15:36:15 +0200
