--- a/icecream/TODO
+++ b/icecream/TODO
@@ -22,3 +22,10 @@ Random:
 * If someone calls a amd64 client on a host that runs a ia32 daemon and there are
   no other amd64 daemons in the farm, he will get no answer, but a timeout from
   scheduler (quite a corner case, but neat)
+
+Suggestions from "Wilson Snyder" sicortex.com:
+- make a debug variable that forces a job to be compiled on specific host to make
+  debugging a farm easier (to be used with care :)
+- Add ICECREAM_RUN_ICECCD to make the scheduler machine not run iceccd
+- Have schedulers redudant - e.g. as in nmbd
+
