--- a/icecream/TODO
+++ b/icecream/TODO
@@ -22,6 +22,7 @@ Random:
 * If someone calls a amd64 client on a host that runs a ia32 daemon and there are
   no other amd64 daemons in the farm, he will get no answer, but a timeout from
   scheduler (quite a corner case, but neat)
+* use syslog
 
 Suggestions from "Wilson Snyder" sicortex.com:
 - make a debug variable that forces a job to be compiled on specific host to make
