fix generation of man pages
They are part of the tarball, but not in git. otherwise people will
touch them instead of the docbook

--- a/doc/man-icecc.1.docbook
+++ b/doc/man-icecc.1.docbook
@@ -18,7 +18,7 @@
 </refentryinfo>
 
 <refmeta>
-	<refentrytitle>Icecream compiler</refentrytitle>
+	<refentrytitle>Icecc</refentrytitle>
 	<manvolnum>1</manvolnum>
 </refmeta>
 
