--- a/README
+++ b/README
@@ -15,5 +15,11 @@ make install
 WARNING: Make sure you specify a prefix, otherwise icecream
 might override your gcc installation!
 
-Please have a look at http://en.opensuse.org/Icecream - the docu 
-is maintained there for the time being
+The documentation is maintained in README.md for the time being.
+
+How to contribute
+=================
+
+Fork on github.com and send a pull request:
+https://github.com/icecc/icecream
+
