--- a/doc/man-icecc.1.docbook
+++ b/doc/man-icecc.1.docbook
@@ -49,7 +49,7 @@ stubs in your path:
 
 <refsect1>
 <title>See Also</title>
-<para>icecream, scheduler, iceccd, icemon</para>
+<para>icecream, icecc-scheduler, iceccd, icemon</para>
 </refsect1>
 
 <refsect1>
