--- a/doc/man-icecream.7.docbook
+++ b/doc/man-icecream.7.docbook
@@ -57,7 +57,7 @@ over them anyway.</para>
 
 <para>If you want to compile using icecream, make sure $prefix/bin is the first
 first entry in your path, e.g. type
-<command>export PATH=/opt/icecream/bin:$PATH</command>
+<command>export PATH=/opt/icecream/lib/icecc/bin:$PATH</command>
 (Hint: put this in ~/.bashrc or /etc/profile to not have to type it in
 everytime)
 </para>
@@ -167,7 +167,7 @@ ln -s /usr/bin/ccache /opt/ccache/bin/g++
 </screen>
 </para>
 
-<para>Then you can replace /opt/icecream/bin with /opt/ccache/bin in your
+<para>Then you can replace /opt/icecream/lib/icecc/bin with /opt/ccache/bin in your
 <varname>$PATH</varname> and all icecream calls will go through ccache (and Qt
 will compile in 62s :)</para>
  
