--- a/README
+++ b/README
@@ -23,3 +23,5 @@ How to contribute
 Fork on github.com and send a pull request:
 https://github.com/icecc/icecream
 
+Mailing list:
+icecream-users@googlegroups.com  (icecream-users+subscribe@googlegroups.com)
