--- a/TODO
+++ b/TODO
@@ -1,5 +1,8 @@
 - use FileChunkMsg for headers (compressed)
 - do not use all local flags on remote
+- -imacros
+- use a separate flag/function for whether to send headers?
+    - -imacros needs it
 
 Release Critical:
 * bind the broadcast listener to fixed local port (8765) (otherwise not firewallable) (matz)
