--- a/TODO
+++ b/TODO
@@ -1,6 +1,7 @@
 - use FileChunkMsg for headers (compressed)
 - do not use all local flags on remote
 - -imacros
+    - it probably doesn't work remotely with -frewrite-includes either
 - use a separate flag/function for whether to send headers?
     - -imacros needs it
 
