sendheaders todo update

--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
 - use FileChunkMsg for headers (compressed)
+- do not send headers that the remote node already has
+- cache somewhere (local daemon?) the md5s for headers, so they don't have to be calculated every time
 - docs for ICECC_PREPROCESS_MODE
+- cleanup the copied environment (with headers)
+- cleanup my modifications allow sending envs to the localhost
+- cleanup my possible TODOs and small hacks
 
 Release Critical:
 * bind the broadcast listener to fixed local port (8765) (otherwise not firewallable) (matz)
