--- a/TODO
+++ b/TODO
@@ -5,6 +5,7 @@
 - cleanup the copied environment (with headers)
 - cleanup my modifications allow sending envs to the localhost
 - cleanup my possible TODOs and small hacks
+- should size of sent headers be calculated in some statistics? it is not part of the compile sent sizes
 
 Release Critical:
 * bind the broadcast listener to fixed local port (8765) (otherwise not firewallable) (matz)
