error message when cannot create directory for headers cache

--- a/TODO
+++ b/TODO
@@ -7,6 +7,7 @@
 - check that the remote actually can accept headers
 - extra option for headers cache size?
     - it's probably better not to count it as part of the env cache (non-trivial to choose what to remove)
+- can chroot commands alter the linked headers (malicious environment)?
 
 Release Critical:
 * bind the broadcast listener to fixed local port (8765) (otherwise not firewallable) (matz)
